Fix RCodegen failure by forking JVM and passing args via file